Migrate to GraalVM #218